--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Maps\SHFW\SHFW_SHFW_FWWXDKJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_GDSTQLJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_JDWXJBXX_Map.cs" />
+    <Compile Include="Maps\SHFW\SHFW_SHFW_JJWXJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_KSHSXSJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_SHPSJBXX_Map.cs" />
     <Compile Include="Maps\SZMX_Map.cs" />
@@ -304,6 +305,7 @@
     <Compile Include="Models\SHFW\SHFW_SHFW_FWWXDKJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_GDSTQLJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_JDWXJBXX.cs" />
+    <Compile Include="Models\SHFW\SHFW_SHFW_JJWXJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_KSHSXSJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_SHPSJBXX.cs" />
     <Compile Include="Models\SZMX.cs" />
