--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Maps\PWKQ\PWKQ_YLYJDPJBXX_Map.cs" />
     <Compile Include="Maps\QZZP\QZZP_JZZPJBXX_Map.cs" />
     <Compile Include="Maps\QZZP\QZZP_QZZPJBXX_Map.cs" />
+    <Compile Include="Maps\SHFW\SHFW_CLFW_ZCJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_BJJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_BJQXJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_BMYSJBXX_Map.cs" />
@@ -299,6 +300,7 @@
     <Compile Include="Models\PWKQ\PWKQ_YLYJDPJBXX.cs" />
     <Compile Include="Models\QZZP\QZZP_JZZPJBXX.cs" />
     <Compile Include="Models\QZZP\QZZP_QZZPJBXX.cs" />
+    <Compile Include="Models\SHFW\SHFW_CLFW_ZCJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_BJJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_BJQXJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_BMYSJBXX.cs" />
