--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -368,6 +368,7 @@
     <Content Include="Areas\Business\Css\QZZP\QZZP_JZZP.css" />
     <Content Include="Areas\Business\Css\QZZP\QZZP_QZZP.css" />
     <Content Include="Areas\Business\Css\RZGL\RZGL.css" />
+    <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_DJSJWP.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_ZC.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_BJ.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_BJQX.css" />
@@ -619,6 +620,8 @@
     <Content Include="Areas\Business\Scripts\Business\QZZP\QZZP_QZZP.js" />
     <Content Include="Areas\Business\Scripts\Business\QZZP\QZZP_QZZPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\RZGL\RZGL.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_DJSJWP.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_DJSJWPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_ZC.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_ZCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_BJ.js" />
@@ -1148,6 +1151,7 @@
     <Compile Include="Areas\Business\Controllers\QZZP\QZZP_JZZPController.cs" />
     <Compile Include="Areas\Business\Controllers\QZZP\QZZP_QZZPController.cs" />
     <Compile Include="Areas\Business\Controllers\RZGLController.cs" />
+    <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_DJSJWPController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_ZCController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_BJController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_BJQXController.cs" />
@@ -1413,6 +1417,7 @@
     <Content Include="Areas\Business\Views\SHFW_WXFW_SJSMWX\SHFW_WXFW_SJSMWX.cshtml" />
     <Content Include="Areas\Business\Views\SHFW_SHFW_QMFSSM\SHFW_SHFW_QMFSSM.cshtml" />
     <Content Include="Areas\Business\Views\SHFW_CLFW_ZC\SHFW_CLFW_ZC.cshtml" />
+    <Content Include="Areas\Business\Views\SHFW_CLFW_DJSJWP\SHFW_CLFW_DJSJWP.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
