--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -154,6 +154,8 @@
     <Compile Include="Maps\QZZP\QZZP_QZZPJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_CLFW_DJSJWPJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_CLFW_JXJBXX_Map.cs" />
+    <Compile Include="Maps\SHFW\SHFW_CLFW_QCPLJBXX_Map.cs" />
+    <Compile Include="Maps\SHFW\SHFW_CLFW_QCWXBYJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_CLFW_ZCJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_BJJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_BJQXJBXX_Map.cs" />
@@ -304,6 +306,8 @@
     <Compile Include="Models\QZZP\QZZP_QZZPJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_CLFW_DJSJWPJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_CLFW_JXJBXX.cs" />
+    <Compile Include="Models\SHFW\SHFW_CLFW_QCPLJBXX.cs" />
+    <Compile Include="Models\SHFW\SHFW_CLFW_QCWXBYJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_CLFW_ZCJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_BJJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_BJQXJBXX.cs" />
