--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -136,6 +136,7 @@
     <Compile Include="BLL\QZZP\QZZP_QZZPBLL.cs" />
     <Compile Include="BLL\RZGLBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_CLFW_DJSJWPBLL.cs" />
+    <Compile Include="BLL\SHFW\SHFW_CLFW_GHSPNJYCBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_CLFW_JXBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_CLFW_QCPLBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_CLFW_QCWXBYBLL.cs" />
