--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -371,6 +371,7 @@
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_DJSJWP.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_GHSPNJYC.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_JX.css" />
+    <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_QCMRZS.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_QCPL.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_QCWXBY.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_ZC.css" />
@@ -630,6 +631,8 @@
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_GHSPNJYCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_JX.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_JXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_QCMRZS.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_QCMRZSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_QCPL.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_QCPLYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_QCWXBY.js" />
@@ -1166,6 +1169,7 @@
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_DJSJWPController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_GHSPNJYCController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_JXController.cs" />
+    <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_QCMRZSBLL.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_QCPLController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_ZCController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_BJController.cs" />
@@ -1180,7 +1184,7 @@
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_KSHSXSController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_QMFSSMController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_SHPSController.cs" />
-    <Compile Include="Areas\Business\Controllers\SHFW\SHFW_WXFW_QCWXBYController.cs" />
+    <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_QCWXBYController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_WXFW_SJSMWXController.cs" />
     <Compile Include="Areas\Business\Controllers\WDFBController.cs" />
     <Compile Include="Areas\Business\Controllers\WDSCController.cs" />
@@ -1438,6 +1442,7 @@
     <Content Include="Areas\Business\Views\SHFW_CLFW_QCPL\SHFW_CLFW_QCPL.cshtml" />
     <Content Include="Areas\Business\Views\SHFW_CLFW_QCWXBY\SHFW_CLFW_QCWXBY.cshtml" />
     <Content Include="Areas\Business\Views\SHFW_CLFW_GHSPNJYC\SHFW_CLFW_GHSPNJYC.cshtml" />
+    <Content Include="Areas\Business\Views\SHFW_CLFW_QCMRZS\SHFW_CLFW_QCMRZS.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
