--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -145,6 +145,7 @@
     <Compile Include="SHFW\ISHFW_CLFW_DJSJWPBLL.cs" />
     <Compile Include="SHFW\ISHFW_CLFW_GHSPNJYCBLL.cs" />
     <Compile Include="SHFW\ISHFW_CLFW_JXBLL.cs" />
+    <Compile Include="SHFW\ISHFW_CLFW_QCGZFHBLL.cs" />
     <Compile Include="SHFW\ISHFW_CLFW_QCMRZSBLL.cs" />
     <Compile Include="SHFW\ISHFW_CLFW_QCPLBLL.cs" />
     <Compile Include="SHFW\ISHFW_CLFW_QCWXBYBLL.cs" />
