--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -371,6 +371,7 @@
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_DJSJWP.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_GHSPNJYC.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_JX.css" />
+    <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_QCGZFH.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_QCMRZS.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_QCPL.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_CLFW_QCWXBY.css" />
@@ -631,6 +632,8 @@
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_GHSPNJYCYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_JX.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_JXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_QCGZFH.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_QCGZFHYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_QCMRZS.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_QCMRZSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_CLFW_QCPL.js" />
@@ -1169,7 +1172,8 @@
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_DJSJWPController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_GHSPNJYCController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_JXController.cs" />
-    <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_QCMRZSBLL.cs" />
+    <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_QCGZFHController.cs" />
+    <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_QCMRZSController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_QCPLController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_CLFW_ZCController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_BJController.cs" />
@@ -1443,6 +1447,7 @@
     <Content Include="Areas\Business\Views\SHFW_CLFW_QCWXBY\SHFW_CLFW_QCWXBY.cshtml" />
     <Content Include="Areas\Business\Views\SHFW_CLFW_GHSPNJYC\SHFW_CLFW_GHSPNJYC.cshtml" />
     <Content Include="Areas\Business\Views\SHFW_CLFW_QCMRZS\SHFW_CLFW_QCMRZS.cshtml" />
+    <Content Include="Areas\Business\Views\SHFW_CLFW_QCGZFH\SHFW_CLFW_QCGZFH.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
