--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Maps\SHFW\SHFW_SHFW_QMFSSMJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_SHPSJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_WXFW_SJSMWXJBXX_Map.cs" />
+    <Compile Include="Maps\SWFW\SWFW_CWKJPGJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_FLZXJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_GSZCJBXX_Map.cs" />
     <Compile Include="Maps\SWFW\SWFW_SBZLJBXX_Map.cs" />
@@ -333,6 +334,7 @@
     <Compile Include="Models\SHFW\SHFW_SHFW_QMFSSMJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_SHPSJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_WXFW_SJSMWXJBXX.cs" />
+    <Compile Include="Models\SWFW\SWFW_CWKJPGJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_FLZXJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_GSZCJBXX.cs" />
     <Compile Include="Models\SWFW\SWFW_SBZLJBXX.cs" />
